# PRISM-TopoMap

./: .gitmodules  CMakeLists.txt  Dockerfile  PR_ablation.md  README.md  docker-compose.yml  local_grid.py  localization.py  models.py  navigation.py  package.xml  prism_topomap_node.py  setup.cfg  setup.py  topo_graph.py  utils.py
config/: gazel_localization.yaml  gazel_mapping.yaml  habitat_mipt_noised_odom.yaml  habitat_mp3d.yaml  habitat_mp3d_localization.yaml  habitat_mp3d_noised_odom.yaml  husky_rosbag_two_realsenses.yaml  husky_rosbag_two_zeds.yaml  itlp_campus_localization.yaml  itlp_campus_localization_dlo.yaml  itlp_campus_mapping.yaml  scout_rosbag.yaml
docker/: Dockerfile  docker-compose.yml  ros_entrypoint.sh
launch/: build_map_by_iou_habitat.launch  build_map_by_iou_habitat.launch.py  build_map_by_iou_habitat_mipt.launch  build_map_by_iou_husky_rosbag.launch  build_map_by_iou_husky_rosbag_two_zeds.launch  build_map_by_iou_scout_rosbag.launch  build_map_by_iou_scout_rosbag.launch.py  gazel_localization.launch  gazel_mapping.launch  habitat_mp3d_localization.launch  habitat_mp3d_localization.launch.py  itlp_campus_localization.launch  itlp_campus_localization_dlo.launch  itlp_campus_mapping.launch  itlp_campus_mapping.launch.py  navigation_habitat.launch  navigation_habitat.launch.py
launch_ros2/: habitat_mp3d_localization.launch.py
prism_topomap/: glim_global_tf_node.py  gt_for_itlp.py  gt_map.py  local_grid.py  localization.py  models.py  prism_topomap.py  prism_topomap_node.py  tf_manager.py  topo_graph.py  utils.py  utils_pointcloud.py
(+32 files in other folders)
